CHANGES.txt - 04/22/2002
------------------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The lp and lpr commands now only override the SIGINT
	  handler if it is not being ignored (patch from Robert
	  Ambrose for some interactive software that catches
	  SIGINT and will gracefully cancel the print...)
	- The PostScript image filter (imagetops) now supports
	  printing CMYK images using the CMYK colorspace.
	- The image filters now support CMYK JPEG files, and
	  correctly handles the inverted files from Photoshop
	  (which seems to save RGBW data, not CMYK...)
	- Added a "check" target to the top-level makefile to
	  conform with GNU standards (same as "test").
	- The IPP code didn't always map the POSIX locale "C" to
	  the proper IPP language code.
	- The cupsaddsmb program was updated to use the
	  setdriver command instead of addprinter.
	- Banner pages were not handled properly for implicit
	  classes.
	- When tunneling to a remote system using SSH, the
	  printer URIs for local printers on the remote system
	  did not reflect the correct port number.
	- The Allow, Deny, BrowseAllow, BrowseDeny, and
	  BrowseAddress directives now support the network
	  interface names "@LOCAL" and "@IF(name)" for access
	  control and browsing based on the current interface
	  addresses instead of fixed names or IP addresses.
	- The texttops filter did not properly recognize the
	  "nowrap" (wrap=false) option.
	- The InstallableOptions group name in a PPD file is now
	  translated separately (CUPS_MSG_OPTIONS_INSTALLED) so
	  that UIs can accurately detect the presence of this
	  group.
	- The scheduler no longer keeps job history data for
	  remote printers on the client (just on the server.)
	- The parallel and USB backends now retry if the backend
	  detects that the printer is not connected to the
	  system (rather than stopping the queue...)
	- The network backends now retry if the backend detects